User & Task Models

--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=fifth.group
+
+database.url=jdbc:postgresql://localhost:${PORT}/tbd_control2
+database.user=${USER}
+database.password=${PASSWORD}
+
+spring.datasource.driverClassName=org.postgresql.Driver
