--- a/api/build.gradle
+++ b/api/build.gradle
@@ -17,8 +17,11 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'io.jsonwebtoken:jjwt-api:0.12.2'
 	runtimeOnly 'org.postgresql:postgresql'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.2'
+	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.2'
 }
 
 tasks.named('test') {
