--- a/api/build.gradle
+++ b/api/build.gradle
@@ -18,8 +18,8 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'io.jsonwebtoken:jjwt-api:0.12.2'
-	runtimeOnly 'org.postgresql:postgresql'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	implementation group: 'org.sql2o', name: 'sql2o', version: '1.6.0'
+	implementation group: 'org.postgresql', name: 'postgresql', version: '42.3.8'
 	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.2'
 	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.2'
 }
